# discord.py-self-template

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  bot.py  checks.py  classes.py  config.py  logger.py  objects.py  termcolors.py
bot/cogs/: __init__.py  configuration.py  developer.py  events.py  help.py  statistics.py  template.py  test.py
bot/utils/: __init__.py  bot.py  colors.py  console.py  help.py
bot/views/: __init__.py  help.py
database/: database.db
prisma/: schema.prisma
src/: __init__.py  __main__.py  bot.py  checks.py  classes.py  config.py  constants.py  customtypes.py  emojis.py  logger.py  objects.py  termcolors.py  utils.py
src/classes/: __init__.py  bot.py  cog.py  commandtree.py  context.py  custom_types.py
src/cogs/: __init__.py  admin.py  configuration.py  developer.py  events.py  help.py  owner.py  statistics.py  template.py  test.py  utilities.py
src/database/: database.db
src/prisma/: schema.prisma
src/utils/: __init__.py  bot.py  colors.py  console.py  help.py  images.py  numbers.py  slash_help.py
src/views/: __init__.py  confirmation.py  help.py  pagination.py  slash_help.py  utilities.py
